# MarketSimulationServer

./: CMakeCache.txt  CMakeLists.txt  Jenkinsfile  Makefile  README  README.md  cmake_install.cmake  licence  license  log  main.cpp  responce.h
src/: main.cpp  netConnect.cpp  netConnect.h  responce.cpp  responce.h
src/client/: Client.java
src/main/: Launcher.java  ServerControler.java
src/market/: Company.java  Market.java  Stock.java  StockQueue.java
src/test/: Test.java
src/util/: Config.java  MyLogger.java  logger.cpp  logger.h
